Create Message bubble and Chat section

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ComposeChat</string>
+    <string name="message_delivered">Message delivered</string>
 </resources>
